--- a/art/cg09/fao_cg09_trosterud.tex
+++ b/art/cg09/fao_cg09_trosterud.tex
@@ -31,7 +31,7 @@ The present paper presents ongoing work on a finite-state transducer, a Constrai
 
 ... two words about the parser ...
 
-The transducer is based upon the lemma list of \emph{Føroysk órðabók} (\cite{Poulsen98})\footnote{Thanks to the authors for making lemmalist and inflection codes electronically accessible, Without it this project would of course not have been realisable.}, and upon the grammatical description found in \cite{Thr04}. 
+The transducer is based upon the lemma list of \emph{Føroysk orðabók} (\cite{Poulsen98})\footnote{Thanks to the authors for making lemmalist and inflection codes electronically accessible, Without it this project would of course not have been realisable.}, and upon the grammatical description found in \cite{Thr04}. 
 
 The Faroese parser uses the computational infrastructure from the Sámi parser project (\textit{giellatekno.uit.no}). It has the same file setup, similar makefiles, etc. There are also benefits in the opposite relation: The Sámi morphophonology testsuite was taken from work on the Faroese \textit{twolc} file. 
 
@@ -175,7 +175,7 @@ The 43093 missing wordforms represent 5.67\% of the 2.7 mill corpus. In order to
 \item Some irregular strong verbs and verb forms
 \item Faroese names (other than person names)
 \item Compounded function words
-\item Words missing from FÓ
+\item Words missing from FO
 \item Plain errors
 \end{itemize}
 
